feat: 19ch personality with framing shutters on gobo moving heads
Add a second DMX personality "19ch - Framing Shutters" to the 8 gobo heads
(Iris 700, ProSpot, SpotXtreme, VL6C, MiniScan, MiniSpot, MovingScan Beams,
MovingVL2C Beams). The 10 standard channels are unchanged; the next 9 follow
the Martin MAC Encore Performance / Robe T1 Profile channel order:

  11 Blade 1 (top)    insertion  0 = out, 255 = fully in
  12 Blade 1          angle      0-126 = -30..0 deg, 127-128 = 0, 129-255 = 0..+30
  13/14 Blade 2 (right), 15/16 Blade 3 (bottom), 17/18 Blade 4 (left)
  19 Whole-module rotation  +/-55 deg, dead zone 127-128

- FramingShutterState: DMX state, NBT, client interpolation, bipolar decoding
- FramingShutterChannels / ExtraLightsSlots: RDM slots SD_FRAMING_SHUTTER and
  SD_SHUTTER_ROTATE (E1.20)
- Gobo block entities implement HasPersonality (the Mode button shows up in
  the config screen) and HasFramingShutters; in 10ch mode the blades stay out
- Rendering: the 4 blades clip the raymarch volume (beam_raymarch.fsh) and the
  projected spot (gobo_projector.fsh) in the gobo frame, each blade pivoting
  around the centre of its edge; the edge softens with defocus